--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
   "dependencies": {
     "broccoli-plugin": "^1.3.0",
     "broccoli-sass-source-maps": "^2.0.0"
-  }
+  },
+  "version": "0.1.0"
 }
